samples/errors/not_determinitic_automaton_1.sara
exemple1 := input1, input2 -> output1, output2 auto {
  state state1, state2  ;
  first state1 ;
  state1 : input1 out output1:0, output2:1 {
    input1 & input2 goto state2 ;
  }
  state2 : ! input1 out output1:0, output2:1 {
    input1 goto state1 ;
  }
} ;
